# rsbadges

./: .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TESTING.md
src/: badge.rs  lib.rs  main.rs
src/badge/: badge_generation.rs  badge_layout.rs  badge_type.rs  format_helper.rs  generate_layout.rs  generate_svg.rs  style.rs  text_helper.rs
templates/: badge_template_flat.xml  badge_template_flat.xml.j2  badge_template_flat_square.xml  badge_template_forthebadge.xml  badge_template_plastic.xml  badge_template_plastic.xml.j2  badge_template_social.xml
tests/: badge_errors.rs  badge_generator.rs  svg_creation.rs
