[package]
authors = ["Brandon Minor <brandon@tangramvision.com>"]
categories = ["command-line-interface", "command-line-utilities", "graphics"]
description = "Create code badges from the comfort and safety of Rust"
edition = "2018"
homepage = "https://gitlab.com/tangram-vision-oss/rsbadges"
keywords = ["badge", "badges", "svg", "shields", "logo"]
license = "BSD-3-Clause"
name = "rsbadges"
readme = "README.md"
repository = "https://gitlab.com/tangram-vision-oss/rsbadges"
version = "1.1.2"

[dependencies]
askama = "0.11"
base64 = "0.13"
css-color = "0.2"
getopts = "0.2"
rand = "0.8"
regex = "1.4"
rusttype = "0.9"
thiserror = "1.0"
unicode-normalization = "0.1"
ureq = "2.0"
webbrowser = "0.5"
